--- a/Foodie/Views/Base.lproj/Main.storyboard
+++ b/Foodie/Views/Base.lproj/Main.storyboard
@@ -311,15 +311,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Su3-c1-agm">
-                                <rect key="frame" x="107.66666666666669" y="694" width="160" height="41"/>
+                                <rect key="frame" x="41.666666666666657" y="694" width="292" height="41"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K7H-RL-Jwf">
-                                        <rect key="frame" x="0.0" y="0.0" width="68" height="41"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="134" height="41"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="41" id="hqd-SE-L6C"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <state key="normal" title="Dislike">
+                                        <state key="normal" title="Find Another">
                                             <color key="titleColor" red="0.94901960784313721" green="0.29215371508192312" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
@@ -327,12 +327,12 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEx-qy-80B">
-                                        <rect key="frame" x="91.999999999999986" y="0.0" width="68.000000000000014" height="41"/>
+                                        <rect key="frame" x="158" y="0.0" width="134" height="41"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="41" id="vs6-21-KRd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <state key="normal" title="Like!">
+                                        <state key="normal" title="Let's Go!">
                                             <color key="titleColor" red="0.023529411764705882" green="0.83921568627450982" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
@@ -348,6 +348,9 @@
                                     <constraint firstAttribute="height" constant="66" id="twS-vo-ZRa"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="YelpTM"/>
+                                <connections>
+                                    <action selector="openUrl:" destination="UbG-lA-RM1" eventType="touchDown" id="mrX-zK-E2I"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -401,7 +404,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Gq4-AX-Hxp" kind="relationship" relationship="viewControllers" id="kvr-rh-XfS"/>
-                        <segue destination="aFl-nZ-r1d" kind="relationship" relationship="viewControllers" id="aOQ-FN-a9c"/>
+                        <segue destination="BY0-OH-gxt" kind="relationship" relationship="viewControllers" id="aOQ-FN-a9c"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CGH-AC-3TR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -427,22 +430,22 @@
             </objects>
             <point key="canvasLocation" x="214" y="-288"/>
         </scene>
-        <!--Profile-->
+        <!--Login Controller-->
         <scene sceneID="vXL-ez-q4v">
             <objects>
-                <viewController id="aFl-nZ-r1d" sceneMemberID="viewController">
+                <viewController id="aFl-nZ-r1d" customClass="LoginController" customModule="Foodie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2pb-dt-YG4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Foodie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VvJ-Av-Ryo">
-                                <rect key="frame" x="118.33333333333333" y="212" width="138.66666666666669" height="57.333333333333314"/>
+                                <rect key="frame" x="118.33333333333333" y="256" width="138.66666666666669" height="57.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                 <color key="textColor" red="0.94509803920000002" green="0.65098039220000004" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JmY-hQ-LMV">
-                                <rect key="frame" x="16" y="302.33333333333331" width="343" height="34"/>
+                                <rect key="frame" x="16" y="346.33333333333331" width="343" height="34"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -452,7 +455,7 @@
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cbe-Gt-fHi">
-                                <rect key="frame" x="16" y="344.33333333333331" width="343" height="34"/>
+                                <rect key="frame" x="16" y="388.33333333333331" width="343" height="34"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -462,7 +465,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="WFv-hN-sYT">
-                                <rect key="frame" x="112.66666666666669" y="391" width="150" height="30"/>
+                                <rect key="frame" x="112.66666666666669" y="435" width="150" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xj0-V6-uU0">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="30"/>
@@ -474,6 +477,9 @@
                                             <constraint firstAttribute="width" constant="57" id="N10-aY-zzY"/>
                                         </constraints>
                                         <state key="normal" title="Register"/>
+                                        <connections>
+                                            <segue destination="yaU-WP-GiD" kind="show" id="v8y-EG-C4Z"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -494,17 +500,95 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Y8d-iN-yng"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="person.crop.circle" catalog="system" id="FcG-mT-IOG"/>
+                    <navigationItem key="navigationItem" id="Fgh-1q-KsL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htG-h3-dq3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="213.59999999999999" y="739.65517241379314"/>
+            <point key="canvasLocation" x="2098.4000000000001" y="739.65517241379314"/>
+        </scene>
+        <!--Profile Controller-->
+        <scene sceneID="wLN-A5-YB3">
+            <objects>
+                <viewController id="yaU-WP-GiD" customClass="ProfileController" customModule="Foodie" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="t3k-As-ho1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52H-uG-PVH">
+                                <rect key="frame" x="16" y="88" width="57" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eYd-Es-XPl">
+                                <rect key="frame" x="0.0" y="211" width="375" height="518"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="F7R-HK-MD1">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="F7R-HK-MD1" id="9YT-zQ-wHW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qdm-QS-z7W">
+                                <rect key="frame" x="16" y="174" width="74" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cj6-3k-wjX">
+                                <rect key="frame" x="16" y="125" width="123" height="30"/>
+                                <state key="normal" title="Change Password"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97254901959999995" green="1" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="52H-uG-PVH" firstAttribute="leading" secondItem="7zw-ln-0Uk" secondAttribute="leading" constant="16" id="1wx-MF-dSF"/>
+                            <constraint firstItem="52H-uG-PVH" firstAttribute="top" secondItem="7zw-ln-0Uk" secondAttribute="top" id="XhK-65-Xjk"/>
+                            <constraint firstItem="cj6-3k-wjX" firstAttribute="top" secondItem="52H-uG-PVH" secondAttribute="bottom" constant="8" id="huW-5k-OIP"/>
+                            <constraint firstItem="cj6-3k-wjX" firstAttribute="leading" secondItem="7zw-ln-0Uk" secondAttribute="leading" constant="16" id="wTG-uU-R9S"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7zw-ln-0Uk"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ios-v1-CCZ">
+                        <barButtonItem key="backBarButtonItem" title="Sign Out" id="X5d-l7-vOK"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c2L-OJ-hiH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2978.4000000000001" y="739.65517241379314"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="fKU-Wg-jcc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BY0-OH-gxt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="FcG-mT-IOG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hUH-6r-H06">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aFl-nZ-r1d" kind="relationship" relationship="rootViewController" id="Kxp-85-WRC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pX6-Qo-A3c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1156" y="739.65517241379314"/>
         </scene>
     </scenes>
     <resources>
         <image name="PhoneShake" width="256" height="256"/>
         <image name="YelpTM" width="500" height="320"/>
-        <image name="person.crop.circle" catalog="system" width="64" height="62"/>
+        <image name="person.fill" catalog="system" width="64" height="60"/>
         <image name="rating5" width="102" height="18"/>
     </resources>
 </document>
